--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -328,7 +328,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .home-brand-name{
-  background-color: rgb(194, 203, 216);
+  background-color: rgb(188, 193, 201);
   font-size: 3rem;
   font-family: 'Raleway', sans-serif;
   text-align: center;
@@ -336,7 +336,7 @@ body::-webkit-scrollbar-thumb {
   margin-top: 3rem;
   min-height: 5.8rem;
   margin-bottom: 3rem;
-  padding-top: 3rem;
+  padding-top: 2.5rem;
   padding-bottom: 1rem;
   border: 1px rgb(211, 210, 210) solid;
 }
@@ -371,7 +371,8 @@ body::-webkit-scrollbar-thumb {
   width: 100%;
   max-width: 25rem;
   font-family: 'Cairo', sans-serif;
-  border: rgb(46, 77, 134) solid 0.5px;
+  border: rgb(65, 84, 119) solid 1px;
+  border-radius: 0.5rem;
 }
 
 .footwear:hover{
@@ -382,7 +383,7 @@ body::-webkit-scrollbar-thumb {
   min-height: 15.4rem;
   margin-bottom: 1rem;
   margin-top:1rem;
-  border-top: rgb(114, 114, 167) solid;
+  border-top: rgb(60, 66, 119) solid;
   padding: 1rem;
   display: flex;
   color: black;
