--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -371,7 +371,7 @@ body::-webkit-scrollbar-thumb {
   width: 100%;
   max-width: 25rem;
   font-family: 'Cairo', sans-serif;
-  border: rgb(65, 84, 119) solid 1px;
+  border: 1px white;
   border-radius: 0.5rem;
 }
 
@@ -380,22 +380,21 @@ body::-webkit-scrollbar-thumb {
 }
 
 .shoe-info{
-  min-height: 15.4rem;
+  min-height: 15.rem;
   margin-bottom: 1rem;
   margin-top:1rem;
-  border-top: rgb(60, 66, 119) solid;
+  border-top: 2px rgb(119, 143, 196) solid;
   padding: 1rem;
   display: flex;
   color: black;
   flex-direction: column;
   text-decoration: none;
   justify-content: space-between;
-  background-color: rgb(174, 185, 196);
+  background-color: rgb(193, 203, 212);
 }
 
 .shoe-info-detailed{
   margin-top: 1rem;
-  min-height:10.5rem;
   display: flex;
   color: black;
   flex-direction: column;
@@ -515,7 +514,7 @@ ul.review {
 /* Shoe Rating */
 
 .rating span {
-  color: rgb(255, 252, 49);
+  color: rgb(175, 173, 22);
   font-size: 2.3rem;
   margin: 0.1rem;
 }
