--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -511,6 +511,20 @@ ul.review {
   margin: 0.5rem;
 }
 
+.review-submit{
+  padding: 1rem;
+  border: .1rem rgb(0, 0, 0) solid;
+  background-color: rgb(223, 223, 236);
+  border-radius: 0.5rem;
+  width: 16rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.review-submit:hover{
+  background-color: rgb(236, 236, 243);
+}
+
 /* Shoe Rating */
 
 .rating span {
@@ -699,10 +713,11 @@ a > .rating > span:last-child {
   border-radius: 0.5rem;
   width: 18rem;
   cursor: pointer;
+  font-weight: bold;
 }
 
 .submit-button:hover{
-  border: .1rem rgb(44, 44, 44) solid;
+  background-color: rgb(236, 236, 243);
 }
 
 /* Sign In Components */
