--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -574,8 +574,10 @@ a > .rating > span:last-child {
 /* Styling for shoe details (when user clicks on a shoe) */
 
 .shoe-loading{
-  margin-top: 5rem;
-  font-size: 18px;
+  width: 100%;
+  height: 100%;
+  margin-top: 10rem;
+  text-align: center;
 }
 
 .shoe-container{
