--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -309,22 +309,38 @@ body::-webkit-scrollbar-thumb {
 }
 
 .filter input,
-.filter button,
 .filter select{
   padding:1rem;
   border-radius: 0.5rem;
-  border: .1rem #c0c0c0 solid;
-  font-size: 1.6rem;
+  border: .1rem #ffffff solid;
+  font-size: 1.5rem;
   list-style-type: none;
   outline: none;
 }
 
 .filter button{
   margin-right: 1rem;
+  padding:1rem;
+  border-radius: 0.5rem;
+  border: .1rem #e2e2e2 solid;
+  font-size: 1.5rem;
+  background-color: rgb(252, 250, 250);
+  list-style-type: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.filter button:hover{
+  background-color: rgb(235, 235, 235);
+  border: .1rem #c9c8c8 solid;
 }
 
 .filter input:focus{
-  border: .1rem rgb(5, 2, 194) solid;
+  border: .1rem rgb(0, 0, 0) solid;
+}
+
+.filter select{
+  border: .1rem rgb(0, 0, 0) solid;
 }
 
 .home-brand-name{
@@ -1019,11 +1035,6 @@ input{
 }
 
 /* misc */
-
-.cursor-pointer{
-  cursor: pointer;
-  background-color: rgb(252, 250, 250);
-}
 
 .align-center{
   text-align: center;
