--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -318,6 +318,10 @@ body::-webkit-scrollbar-thumb {
   outline: none;
 }
 
+.option{
+  min-height: 10rem;
+}
+
 .filter button{
   margin-right: 1rem;
   padding:1rem;
@@ -401,7 +405,7 @@ body::-webkit-scrollbar-thumb {
   min-height: 16rem;
   margin-bottom: 1rem;
   margin-top:1rem;
-  border-top: 2px rgb(119, 143, 196) solid;
+  border-top: 2px rgb(65, 95, 160) solid;
   padding: 1rem;
   display: flex;
   color: black;
