Improved select filter

--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -1076,8 +1076,7 @@ option {
 }
 
 .select-style{
-  font-family: 'Quicksand', sans-serif;
-  font-weight: bold;
+  font-family: 'Raleway', sans-serif;
 }
 
 .montserrat-text{
